--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start-client": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start": "npm run build && (cd server && npm start)"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
