set up backend server, create an api endpoint for ingredients

--- a/recipe-runner/package.json
+++ b/recipe-runner/package.json
@@ -23,6 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:34873/",
   "eslintConfig": {
     "extends": [
       "react-app",
