--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "concurrently": "^6.3.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
