--- a/recipe-runner/package.json
+++ b/recipe-runner/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://flip2.engr.oregonstate.edu:34876/",
+  "proxy": "http://localhost:34876/",
   "eslintConfig": {
     "extends": [
       "react-app",
