--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "heroku-postbuild": "cd recipe-runner && npm install && npm run build",
     "server": "nodemon server.js",
-    "client": "cd ../recipe-runner && npm start",
+    "client": "cd ./recipe-runner && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
