--- a/recipe-runner/package.json
+++ b/recipe-runner/package.json
@@ -24,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:34880",
   "eslintConfig": {
     "extends": [
       "react-app",
